# elementary

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  node.yml
benchmark/: CMakeLists.txt  Main.cpp
benchmark/snaps/: snap_01_sine.json  snap_02_blepsaw.json  snap_03_taps.json
cli/: Benchmark.cpp  Benchmark.h  BenchmarkMain.cpp  CLIBenchmarkEngine.h  CLIEngine.h  CLIMain.cpp  CMakeLists.txt  README.md  Realtime.cpp  Realtime.h  RealtimeMain.cpp
cli/examples/: 00_HelloSine.js  01_FMArp.js  02_StrangerThings.js  package-lock.json  package.json
cli2/: Benchmark.cpp  CMakeLists.txt  Main.cpp  Realtime.cpp
cli2/examples/: 00_HelloSine.js
js/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
js2/: README.md  package-lock.json
rs/: Cargo.toml
rs/cli/: Cargo.toml  build.rs
rs/cli/src/: Bindings.cpp  Bindings.h  main.rs
rs/elementary/: Cargo.toml  build.rs  compile_flags.txt
rs/elementary/src/: lib.rs
rs/elementary/src/include/: JSON.h  Main.cpp  Runtime.h  RuntimeShim.h  cxx.h
runtime/: CMakeLists.txt  DefaultNodeTypes.h  ElemAssert.h  GraphNode.h  GraphRenderSequence.h  Invariant.h  JSON.h  MultiChannelRingBuffer.h  Runtime.h  SingleWriterSingleReaderQueue.h  Types.h  Value.h
runtime/builtins/: Analyzers.h  Capture.h  Core.h  Delays.h  Feedback.h  Filters.h  Math.h  Metro.h  Noise.h  Sample.h  Seq2.h  SparSeq.h  SparSeq2.h  Table.h
runtime/builtins/filters/: MultiMode1p.h  SVF.h  SVFShelf.h
runtime/builtins/helpers/: RefCountedPool.h
runtime/elem/: AudioBufferResource.h  DefaultNodeTypes.h  GraphNode.h  GraphRenderSequence.h  MultiChannelRingBuffer.h  Runtime.h  SharedResource.h  Types.h  Value.h
runtime/elem/builtins/: Analyzers.h  Capture.h  Core.h  Delays.h  Feedback.h  Filters.h  Math.h  Noise.h  Oscillators.h  Sample.h  SampleSeq.h  Seq2.h  SparSeq.h  SparSeq2.h  Table.h
runtime/elem/builtins/filters/: MultiMode1p.h  SVF.h  SVFShelf.h
runtime/elem/builtins/helpers/: BitUtils.h  BufferUtils.h  Change.h  FloatUtils.h  GainFade.h  ValueHelpers.h
runtime/elem/builtins/mc/: Capture.h  Sample.h  SampleSeq.h  Table.h
scripts/: build-wasm.sh
wasm/: CMakeLists.txt  Convolve.h  FFT.h  Main.cpp  Metro.h  SampleTime.h  pre.js
