[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.131"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"

[build-dependencies]
cxx-build = "1.0.131"
